# STM32F429-TI81-Calculator

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COUPLING_REFACTOR.md  LICENSE  OPEN_SOURCE_RECOMMENDATIONS.md  QUALITY_TRACKER.md  README.md  STM32F429-TI81-Calculator.ioc  STM32F429XX_FLASH.ld  TEMP-prgm_manual_tests.md
.agent/workflows/: update-project.md
.claude/plans/: power_management.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
App/Display/: lv_conf.h  lv_port_indev.c
App/Drivers/Keypad/: keypad.h  keypad_map.c  keypad_map.h
App/Fonts/: jetbrains_mono_20.c  jetbrains_mono_24.c
App/HW/Keypad/: keypad.c  keypad.h  keypad_map.c  keypad_map.h
App/Inc/: app_common.h  app_init.h  calc_engine.h  calc_history.h  calc_internal.h  calc_stat.h  calculator_core.h  expr_util.h  graph.h  graph_draw.h  graph_ui.h  graph_ui_range.h  menu_state.h  persist.h  prgm.h  prgm_exec.h  ui_draw.h  ui_graph_zoom.h  ui_input.h  ui_math_menu.h  ui_matrix.h  ui_mode.h  ui_palette.h  ui_param_yeq.h  ui_prgm.h  ui_prgm_ctl.h  ui_prgm_exec.h  ui_prgm_io.h  ui_stat.h  ui_vars.h  ui_yvars.h
App/LVGL/: lv_conf.h  lv_port_indev.c
App/Src/: app_init.c  calc_engine.c  calc_history.c  calc_internal.h  calc_stat.c  calculator_core.c  expr_buffer.c  expr_util.c  graph.c  graph_draw.c  graph_ui.c  graph_ui_range.c  menu_state.c  persist.c  prgm.c  prgm_exec.c  ui_draw.c  ui_graph_zoom.c  ui_input.c  ui_math_menu.c  ui_matrix.c  ui_mode.c  ui_param_yeq.c  ui_prgm.c  ui_prgm_ctl.c  ui_prgm_exec.c  ui_prgm_io.c  ui_stat.c  ui_vars.c  ui_yvars.c
App/Tests/: CMakeLists.txt  calculator_core_test_stubs.h  prgm_exec_test_stubs.h  test_calc_engine.c  test_expr_buffer.c  test_expr_util.c  test_menu_state.c  test_normal_mode.c  test_param.c  test_persist_roundtrip.c  test_prgm_exec.c  test_stat.c  test_yvars.c
Core/Fonts/: jetbrains_mono_20.c  jetbrains_mono_24.c
Core/Inc/: FreeRTOSConfig.h  app_common.h  calc_engine.h  graph.h  main.h
Core/Src/: calc_engine.c  calculator_core.c  graph.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Drivers/BSP/STM32F429I-Discovery/: stm32f429i_discovery_lcd.c  stm32f429i_discovery_lcd.h
Drivers/Keypad/: keypad.c  keypad_map.c
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  test_calc_engine  test_expr_buffer  test_expr_util  test_menu_state  test_normal_mode  test_param  test_persist_roundtrip  test_prgm_exec  test_stat  test_yvars
build-tests/App/Tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_calc_engine
build-tests/Testing/Temporary/: CTestCostData.txt
build-tests/cmake/stm32cubemx/: Makefile  cmake_install.cmake
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: ARCHITECTURE.md  CODE_REVIEW_PENDING.md  DISPLAY_STABILITY.md  GETTING_STARTED.md  INDEX.md  INTERFACE_REFACTOR_PLAN.md  MAINTENANCE_STANDARDS.md  MENU_SPECS.md  OPEN_SOURCE_RECOMMENDATIONS.md  PCB_DESIGN.md  PERSISTENCE_FLOW.md  POWER_MANAGEMENT.md  PRGM_COMMANDS.md  PROJECT_HISTORY.md  PROJECT_UPDATE_PROCEDURE.md  QUALITY_TRACKER.md  TECHNICAL.md  TESTING.md  TROUBLESHOOTING.md  UsageDelayedQueue.md  p28_cursor_manual_tests.md  prgm_man_results.txt  prgm_manual_tests.md
scripts/: check_sync.sh  list_modules.sh  update_test_counts.sh
